Continue tilt setup

--- a/docker-tilt/Makefile
+++ b/docker-tilt/Makefile
@@ -1,10 +1,19 @@
-# Default target
-all: default
+.EXPORT_ALL_VARIABLES:
+CAPI_KIND_CLUSTER_NAME = ecoqube-dev
+KIND_CLUSTER_VERSION = v1.27.1
+CLUSTER_TOPOLOGY = true
+EXP_CLUSTER_RESOURCE_SET = true
 
-# Compile the source file and create an executable
-.PHONY: default
+.PHONY: all $(MAKECMDGOALS)
 
-# Clean up the generated executable
-default:
-	# TODO: Prepare kind cluster
-	echo "todo"
+all: tilt-prepare tilt-up
+
+tilt-prepare:
+	./hack/kind-install-for-capd.sh
+
+tilt-up: tilt-prepare
+	tilt up
+
+clean:
+	kind delete cluster --name=${CAPI_KIND_CLUSTER_NAME}
+	docker ps --filter name="kind-registry" -aq | xargs docker stop | xargs docker rm
