--- a/docker-tilt/templates/capd/cluster-template-ecoqube-dev.yaml
+++ b/docker-tilt/templates/capd/cluster-template-ecoqube-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
-  name: "ecoqube-dev"
+  name: "ecoqube-wkld-dev"
   namespace: default
   labels:
     cni: calico
