Start Tilt work on workload cluster

--- a/docker-tilt/Makefile
+++ b/docker-tilt/Makefile
@@ -4,6 +4,7 @@ CAPI_WKLD_CLUSTER_NAME = ecoqube-wkld-dev
 KIND_CLUSTER_VERSION = v1.27.1
 CLUSTER_TOPOLOGY = true
 EXP_CLUSTER_RESOURCE_SET = true
+CURDIR = $(shell pwd)
 
 .PHONY: all $(MAKECMDGOALS)
 
@@ -16,7 +17,7 @@ tilt-management-up: tilt-prepare
 	tilt up --file=management.tiltfile --port="10350"
 
 tilt-workload-up:
-	cd tilt-workload && tilt up --file=workload.tiltfile --port="10351"
+	export KUBECONFIG="${CURDIR}/${CAPI_WKLD_CLUSTER_NAME}.kubeconfig" && cd tilt-workload && tilt up --file=workload.tiltfile --port="10351"
 
 clean:
 	kind delete cluster --name=${CAPI_KIND_CLUSTER_NAME}
