--- a/docker-tilt/templates/crs/original-manifests/custom-metrics-apiserver.yaml
+++ b/docker-tilt/templates/crs/original-manifests/custom-metrics-apiserver.yaml
@@ -58,6 +58,7 @@ spec:
       containers:
       - name: custom-metrics-apiserver
         image: directxman12/k8s-prometheus-adapter-amd64
+        imagePullPolicy: IfNotPresent
         args:
         - --secure-port=6443
         - --tls-cert-file=/var/run/serving-cert/tls.crt
