--- a/docker-tilt/templates/crs/original-manifests/prometheus.yaml
+++ b/docker-tilt/templates/crs/original-manifests/prometheus.yaml
@@ -209,6 +209,7 @@ spec:
       containers:
         - name: prometheus
           image: prom/prometheus:v2.2.1
+          imagePullPolicy: IfNotPresent
           args:
             - "--config.file=/etc/prometheus/prometheus.yml"
             - "--storage.tsdb.path=/prometheus/"
