Finish workload cluster Tiltfile

--- a/docker-tilt/Makefile
+++ b/docker-tilt/Makefile
@@ -4,19 +4,29 @@ CAPI_WKLD_CLUSTER_NAME = ecoqube-wkld-dev
 KIND_CLUSTER_VERSION = v1.27.1
 CLUSTER_TOPOLOGY = true
 EXP_CLUSTER_RESOURCE_SET = true
+KIND_REGISTRY_NAME = kind-registry
+KIND_REGISTRY_PORT = 5000
 CURDIR = $(shell pwd)
 
 .PHONY: all $(MAKECMDGOALS)
 
-all: tilt-prepare tilt-management-up
+all: tilt-prepare-mgmt tilt-management-up
 
-tilt-prepare:
+tilt-prepare-mgmt:
 	unset KUBECONFIG && ./hack/kind-install-for-capd.sh
 
-tilt-management-up: tilt-prepare
-	kubectl config set-context kind-ecoqube-mgmt-dev-admin@kind-ecoqube-mgmt-dev && tilt up --file=management.tiltfile --port="10350"
+tilt-management-up: tilt-prepare-mgmt
+	unset KUBECONFIG && \
+	kubectl config set-context kind-ecoqube-mgmt-dev-admin@kind-ecoqube-mgmt-dev && \
+	tilt up --file=management.tiltfile --port="10350"
 
-tilt-workload-up:
+tilt-prepare-wkld:
+	export KUBECONFIG="${CURDIR}/${CAPI_WKLD_CLUSTER_NAME}.kubeconfig" && \
+	kubectl config set-context ${CAPI_WKLD_CLUSTER_NAME}-admin@${CAPI_WKLD_CLUSTER_NAME} && \
+	./hack/restart-containerd.sh && \
+	./hack/document-local-registry.sh
+
+tilt-workload-up: tilt-prepare-wkld
 	export KUBECONFIG="${CURDIR}/${CAPI_WKLD_CLUSTER_NAME}.kubeconfig" && \
 	kubectl config set-context ${CAPI_WKLD_CLUSTER_NAME}-admin@${CAPI_WKLD_CLUSTER_NAME} && \
 	cd tilt-workload && \
