--- a/docker-tilt/touch.yaml
+++ b/docker-tilt/touch.yaml
@@ -2,18 +2,17 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: cpu-stress-pod
-
 spec:
   containers:
     - name: cpu-stress-container
       image: petarmaric/docker.cpu-stress-test
       env:
         - name: MAX_CPU_CORES
-          value: "12"
+          value: "24"
         - name: STRESS_SYSTEM_FOR
           value: "10m"
       resources:
         requests:
-          cpu: "500m"
+          cpu: "12"
         limits:
-          cpu: "500m"
+          cpu: "12"
