Refactor annotation to be hardware type instead of workload type, small change in workload.tiltfile

--- a/cpu-diff-demo/25-cpu-stress-test-job-wtype.yaml
+++ b/cpu-diff-demo/25-cpu-stress-test-job-wtype.yaml
@@ -25,5 +25,5 @@ spec:
               cpu: 250m
       restartPolicy: Never
       nodeSelector:
-        ecoqube.eu/wkld-type: cpu
+        ecoqube.eu/hardware-type: cpu
   backoffLimit: 4
