--- a/gcp/scheduling-dev-wkld.yaml
+++ b/gcp/scheduling-dev-wkld.yaml
@@ -109,7 +109,7 @@ spec:
       kind: GCPMachineTemplate
       name: scheduling-dev-wkld-control-plane
   replicas: 1
-  version: v1.25.0
+  version: v1.27.7
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: GCPMachineTemplate
@@ -119,8 +119,8 @@ metadata:
 spec:
   template:
     spec:
-      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-2004-v1-25-0-1662644962
-      instanceType: n1-standard-2
+      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-2204-v1-27-7-1702984275
+      instanceType: e2-small
 ---
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
@@ -145,7 +145,7 @@ spec:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
         kind: GCPMachineTemplate
         name: scheduling-dev-wkld-md-0
-      version: v1.25.0
+      version: v1.27.7
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: GCPMachineTemplate
@@ -155,8 +155,8 @@ metadata:
 spec:
   template:
     spec:
-      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-2004-v1-25-0-1662644962
-      instanceType: n1-standard-2
+      image: projects/k8s-ecoqube-development/global/images/cluster-api-ubuntu-2204-v1-27-7-1702984275
+      instanceType: e2-small
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
@@ -480,7 +480,7 @@ metadata:
   creationTimestamp: null
   name: scheduler-extender-configmap
 --- # ClusterResourceSets
-apiVersion: addons.cluster.x-k8s.io/v1alpha3
+apiVersion: addons.cluster.x-k8s.io/v1beta1
 kind: ClusterResourceSet
 metadata:
   name: prometheus
@@ -492,7 +492,7 @@ spec:
     - kind: ConfigMap
       name: prometheus-configmap
 ---
-apiVersion: addons.cluster.x-k8s.io/v1alpha3
+apiVersion: addons.cluster.x-k8s.io/v1beta1
 kind: ClusterResourceSet
 metadata:
   name: prometheus-node-exporter
@@ -504,7 +504,7 @@ spec:
     - kind: ConfigMap
       name: prometheus-node-exporter-configmap
 ---
-apiVersion: addons.cluster.x-k8s.io/v1alpha3
+apiVersion: addons.cluster.x-k8s.io/v1beta1
 kind: ClusterResourceSet
 metadata:
   name: custom-metrics
@@ -516,7 +516,7 @@ spec:
     - kind: ConfigMap
       name: custom-metrics-configmap
 ---
-apiVersion: addons.cluster.x-k8s.io/v1alpha3
+apiVersion: addons.cluster.x-k8s.io/v1beta1
 kind: ClusterResourceSet
 metadata:
   name: scheduler-extender
